WIP: figuring out rows and columns
co-authored-by: Min Chang <minchangmhc@gmail.com>
co-authored-by: Seth Medeiros <medeirosseth@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,11 +5,58 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Wiki Rebuild</title>
 </head>
 
 <body>
+  <div class="container">
 
+    <div class="card">
+      <div class="row">
+        <div class="card-body">
+          <div class="col-6">
+            <h1 class="card-title">Welcome to <a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a></h1>
+            <p>the free encyclopedia that anyone can edit,</p>
+          </div>
+        </div>
+
+
+        <div class="col-2">
+          <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Arts</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Biography</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Geography</a></li>
+          </ul>
+        </div>
+        <div class="col-2">
+          <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">History</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Mathematics</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Science</a></li>
+          </ul>
+        </div>
+
+        <div class="col-2">
+          <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Society</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">Technology</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Main_Page">All Portals</a></li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
+  </div>
+  </div>
+
+  </div>
+  </div>
 </body>
 
 </html>
