--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
 
-    <div class="card">
+    <div class="card bg-light mb-3">
       <div class="row">
         <div class="card-body">
           <div class="col-6">
@@ -21,8 +21,6 @@
             <p>the free encyclopedia that anyone can edit,</p>
           </div>
         </div>
-
-
         <div class="col-2">
           <ul>
             <li><a href="https://en.wikipedia.org/wiki/Main_Page">Arts</a></li>
@@ -37,7 +35,6 @@
             <li><a href="https://en.wikipedia.org/wiki/Main_Page">Science</a></li>
           </ul>
         </div>
-
         <div class="col-2">
           <ul>
             <li><a href="https://en.wikipedia.org/wiki/Main_Page">Society</a></li>
@@ -46,14 +43,42 @@
           </ul>
         </div>
       </div>
-
     </div>
   </div>
 
+  <div class="container">
+
+    <div class="row">
+      <div class="col-6">
+        <div class="card bg-success mb-3">
+          <div class="card-body">
+            <h2>Titile form todays article</h2>
+            <p><img
+                src="https://images.unsplash.com/photo-1522926193341-e9ffd686c60f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8YmlyZHxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80"
+                alt="bird">
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum."
+            </p>
+          </div>
+        </div>
+
+      </div>
 
 
-  </div>
-  </div>
+
+
+      <div class="col-6">
+        <div class="card bg-primary mb-3">
+          <div class="card-body">
+          </div>
+        </div>
+      </div>
+
+
+    </div>
 
   </div>
   </div>
