Add new card attribute
co-authored-by: Min Chang <minchangmhc@gmail.com>
co-authored-by: Seth Medeiros <medeirosseth@gmail.com>

--- a/index.html
+++ b/index.html
@@ -98,11 +98,43 @@
           </div>
         </div>
       </div>
-
-
     </div>
-
   </div>
+
+  <div class="container">
+    <div class="card border-danger mb-3">
+      <div class="card-body">
+        <h2 class="card-title">From today's featured list</h2>
+        <p>
+          <img id="woman" src="https://www.macfound.org/media/photos/ghez_andrea_download_1.jpg" alt="Picture of woman">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic alias rerum exercitationem tenetur, laborum
+          officia delectus voluptas numquam nihil provident, voluptatibus et aspernatur non repellat rem ullam quasi
+          aliquam earum.
+          Alias obcaecati odio praesentium quas esse similique possimus vitae, nobis sit numquam! Doloribus voluptatum
+          enim quas nesciunt vitae? Exercitationem alias corporis, enim tenetur quidem numquam iusto? Suscipit vero
+          dolore ad!
+          Necessitatibus ab eaque nisi molestiae suscipit quo rerum, inventore laboriosam sit doloremque, architecto
+          earum recusandae molestias modi, explicabo vero. Est ducimus nihil provident vero praesentium possimus aut
+          recusandae suscipit maiores.
+          Id, rerum sapiente est, placeat voluptas minima voluptatum at corrupti hic nam suscipit cumque dolorem!
+          Nostrum iusto eligendi nisi facere. Cupiditate laudantium quisquam rerum quia ipsum obcaecati similique porro
+          minus?
+          Dolores voluptate reprehenderit, velit illum error, minima magnam quia maiores facere quam expedita amet
+          laudantium excepturi culpa cumque necessitatibus rerum saepe corrupti inventore provident aperiam similique,
+          dignissimos atque? Cum, blanditiis!
+          Fuga culpa saepe amet nam nihil, fugiat molestiae? Praesentium cumque, rerum, delectus maiores numquam
+          mollitia eveniet aliquam error ducimus dolor quod atque consequuntur, quia ad fuga nesciunt a autem. Mollitia?
+          Obcaecati explicabo maxime voluptate molestias, mollitia delectus, impedit corrupti officiis odio velit
+          commodi eveniet consequuntur dolorum cupiditate autem libero similique veritatis sunt! Nam animi porro fugiat
+          est, ratione itaque eius?
+          Molestiae, ullam quasi cumque qui cum nemo. Omnis id, delectus quisquam ut sint incidunt explicabo mollitia
+          vero quaerat cupiditate blanditiis quasi exercitationem, nobis aspernatur temporibus fugit. Consequatur velit
+          adipisci incidunt?
+        </p>
+      </div>
+    </div>
+  </div>
+
   </div>
 </body>
 
